--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "solc": "^0.6.10",
+    "truffle-hdwallet-provider": "^1.0.17",
     "typescript": "^3.7.5",
     "web3": "^1.2.9"
   },
