--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.14",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@truffle/hdwallet-provider": "^1.0.37",
     "@types/body-parser": "^1.19.0",
     "@types/cookie-session": "^2.0.41",
+    "@types/crypto-js": "^3.1.47",
     "@types/express": "^4.17.7",
     "@types/jest": "^24.9.1",
     "@types/mocha": "^7.0.2",
@@ -21,6 +23,7 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
     "ganache-cli": "^6.9.1",
